--- a/cheatsheets.org
+++ b/cheatsheets.org
@@ -356,11 +356,84 @@ from PIL import Image
 
 img = np.array(Image.open("cat.jpg"))
 print(img.dtype, img.shape)
+
+img_no_blue = np.array(img * ([1, 1, 0]), dtype=np.uint8)
+
+Image.fromarray(img).save("no_blue_cat.jpg")
 #+END_SRC
 ** Scipy
 SciPy builds on numpy, and provides a large number of functions that operate on
 numpy arrays and are useful for different types of scientific and engineering
 applications.
+*** Distance
+#+BEGIN_SRC python
+import numpy as np
+from scipy.spatial.distance import pdist, squareform
+
+# Create the following array where each row is a point in 2D space:
+# [[0 1]
+#  [1 0]
+#  [2 0]]
+x = np.array([[0, 1], [1, 0], [2, 0]])
+print(x)
+
+# Compute the Euclidean distance between all rows of x.
+# d[i, j] is the Euclidean distance between x[i, :] and x[j, :],
+# and d is the following array:
+# [[ 0.          1.41421356  2.23606798]
+#  [ 1.41421356  0.          1.        ]
+#  [ 2.23606798  1.          0.        ]]
+d = squareform(pdist(x, 'euclidean'))
+print(d)
+#+END_SRC
+** Matlplotlib
+Plotting library
+#+BEGIN_SRC python
+import numpy as np
+import matplotlib.pyplot as plt
+
+# Compute the x and y coordinates for points on sine and cosine curves
+x = np.arange(0, 3 * np.pi, 0.1)
+y_sin = np.sin(x)
+y_cos = np.cos(x)
+
+# Plot the points using matplotlib
+plt.plot(x, y_sin)
+plt.plot(x, y_cos)
+plt.xlabel('x axis label')
+plt.ylabel('y axis label')
+plt.title('Sine and Cosine')
+plt.legend(['Sine', 'Cosine'])
+plt.show()
+#+END_SRC
+
+You can also use subplots
+#+BEGIN_SRC python
+import numpy as np
+import matplotlib.pyplot as plt
+
+# Compute the x and y coordinates for points on sine and cosine curves
+x = np.arange(0, 3 * np.pi, 0.1)
+y_sin = np.sin(x)
+y_cos = np.cos(x)
+
+# Set up a subplot grid that has height 2 and width 1,
+# and set the first such subplot as active.
+plt.subplot(2, 1, 1)
+
+# Make the first plot
+plt.plot(x, y_sin)
+plt.title('Sine')
+
+# Set the second subplot as active, and make the second plot.
+plt.subplot(2, 1, 2)
+plt.plot(x, y_cos)
+plt.title('Cosine')
+
+# Show the figure.
+plt.show()
+#+END_SRC
+
 * Haskell
 ** Normal forms
 *** Thunk
